[package]
name = "replit_db"
version = "1.0.0"
authors = ["runner"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate for maniging repl.it db asyncrounsly"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.6", default-features=false, features = ["http1", "client", "tcp"]}
thiserror = "1.0.30"
hyper-tls = "0.5.0"
log = "0.4.14"
tokio = {version = "1.15.0", default-features=false, features = ["macros", "rt"]}
futures = "0.3.24"
[dev-dependencies]
lazy_static = "1.4.0"

[lib]
